--- a/Program/TimeAndTune/TimeAndTune/DialogWindows/NewTaskDialog.xaml
+++ b/Program/TimeAndTune/TimeAndTune/DialogWindows/NewTaskDialog.xaml
@@ -247,7 +247,9 @@
             VerticalAlignment="Top"
             HorizontalAlignment="Center"
             Width="279" Height="100"
-            Fill="#1C4335"/>
+            Fill="#1C4335"
+            Stroke="#FFFFFF"
+            StrokeThickness="3"/>
         <TextBlock 
              VerticalAlignment="Top"
              HorizontalAlignment="Center"
